# homework_19.1

./: .gitignore  README.md  html_content.py  index.html  main.py  pyproject.toml  settings.py  utils.py
