[tool.poetry]
name = "homework-19-1"
version = "0.1.0"
description = ""
authors = ["Sergey Shershikov <ssher250110@yandex.ru>"]
readme = "README.md"
packages = [{include = "homework_19"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
